# plaid-cli

./: .gitignore  README.md  pyproject.toml
plaid_cli/: __init__.py  __main__.py  accounts.py  balances.py  client.py  identity.py  investments.py  liabilities.py  recurring.py  spending.py  transactions.py
